Docker konteynerı Streamlit çalışacak şekilde düzenlendi

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-torch
-torchvision
 pandas
-scikit-learn
-plotly
-wandb
-streamlit
+numpy
+torch
 matplotlib
-seaborn
-jupyterlab
+plotly
+scikit-learn
+statsmodels
+pmdarima
+optuna
+wandb
+joblib
+streamlit
